# dados

./: README.MD  engenharia.md  roadmap.md
airflow/: airflow.md
databricks/: databricks.md
livro-projeto_ds_python/: cap_01.ipynb  comandos.md
pandas/: merge.py  pandas.md
pandas/dia01/: ex01.py  ex02.py
pandas/dia02/: import_csv.py  import_csv_02.py  import_excel.py
pandas/dia03/: convertendo_tipos.py  novas_colunas.py  ordenacao.py  remove_dup.py  remove_dup_ex.py
pandas/dia04/: aggs.py  agregando_dados.py  merge.py  nans.py
pandas/dia05/: concat.py  merge_2.py  pandas_db.py
pandas/pandas_aluras/input_output/: csv.py  (+3 more)
python/: 100daysOfPython.md  python.md
python/100DaysOfPython/: 100days.md
python/conceitos/: condicionais.py  excecoes.py  for.py  lists.py  loops.py  randomm.py  sets.py  strings.py  teste.csv  tuples.py  variancia.py  with.py
python/day-01/: 01.py  projeto-01.py
python/day-02/: 02.py  projeto-02.py
python/day-03/: 02.py
python/day-04/: 04.py
python/day-05/: 05.py  even_numbers.py  everage_height.py  high_score.py
python/day-06/: funcoes.py
python/exercicios/: exe002.py  exer36.py  exer38.py  exer39.py  loops.py  mensalidades.py  pedra_papel.py  tempCodeRunnerFile.py  todo.py  todo.txt  user_input_txt.py
python/python_/: list.py
spark/: spark.md  teste.py
sql/: sql.md
sql/consultas_avancadas/: agrupando_resultados.sql  case.sql  distinct.sql  filtros_logicos.sql  filtros_quantitativos.sql  like.sql  limitando_consultas.sql  ordenando_resultados.sql
sql/sql_para_analise_dado/: resumo.md
teste/: pyproject.toml
(+10 files in other folders)
