[tool.poetry]
name = "teste"
version = "0.1.0"
description = ""
authors = ["LucasDamascenoo <lucas.oliveira.damasceno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
